Ajuste no projeto para permitir a chamada do comando que limpa a tela no console a partir do arquivo .bat (solucao diferente do professor para reaproveitar o CMD do Windows)