@@ -43,13 +43,15 @@ public class ChessUI {
 		}
 
 	}
-	
+
 	public static void clearScreen() throws IOException {
-//		System.out.println("\033[H\033[2J");
-//		System.out.flush();
-		
-//		Runtime.getRuntime().exec("cls");
-		
+		try {
+			if (System.getProperty("os.name").contains("Windows"))
+				new ProcessBuilder("cmd", "/c", "cls").inheritIO().start().waitFor();
+			else
+				Runtime.getRuntime().exec("clear");
+		} catch (IOException | InterruptedException ex) {
+		}
 	}
 
 }
